manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    run: web
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
  selector:
    run: server
